tests/neg-macros/annot-on-type/Test_2.scala
@voidAnnot
type A // error

object B:
  @voidAnnot
  type C // error

  def test =
    @voidAnnot
    type D // error
    ()
